Force using Docker DNS resolver, so HAProxy will update DNS names for services (#227)
This allows to make service UP when starting with `init-addr none` so IP of service will be resolver later when service will be UP. Now proxy can be started first before any services are running yet

--- a/test_configs/reload-error.cfg
+++ b/test_configs/reload-error.cfg
@@ -57,7 +57,7 @@ frontend services
 backend test-other-service-be
     mode http
 
-    server 7d2f499d261b_0_32770 192.168.99.105:32770 check
+    server 7d2f499d261b_0_32770 192.168.99.105:32770 check resolvers docker
 
     acl defaultUsersAcl http_auth(defaultUsers)
     http-request auth realm defaultRealm if !defaultUsersAcl
@@ -65,11 +65,11 @@ backend test-other-service-be
 backend test-service-be
     mode http
 
-    server 7d2f499d261b_0_32768 192.168.99.105:32768 check
+    server 7d2f499d261b_0_32768 192.168.99.105:32768 check resolvers docker
 
-    server 7d2f499d261b_1_32771 192.168.99.105:32771 check
+    server 7d2f499d261b_1_32771 192.168.99.105:32771 check resolvers docker
 
-    server 7d2f499d261b_2_32769 192.168.99.105:32769 check
+    server 7d2f499d261b_2_32769 192.168.99.105:32769 check resolvers docker
 
     acl defaultUsersAcl http_auth(defaultUsers)
     http-request auth realm defaultRealm if !defaultUsersAcl
