--- a/test_configs/reload.cfg
+++ b/test_configs/reload.cfg
@@ -57,7 +57,7 @@ frontend services
 backend test-other-service-be
     mode http
 
-    server 7d2f499d261b_0_32770 192.168.99.105:32770 check
+    server 7d2f499d261b_0_32770 192.168.99.105:32770 check resolvers docker
 
     acl defaultUsersAcl http_auth(defaultUsers)
     http-request auth realm defaultRealm if !defaultUsersAcl
@@ -65,11 +65,11 @@ backend test-other-service-be
 backend test-service-be
     mode http
 
-    server 7d2f499d261b_0_32768 192.168.99.105:32768 check
+    server 7d2f499d261b_0_32768 192.168.99.105:32768 check resolvers docker
 
-    server 7d2f499d261b_1_32771 192.168.99.105:32771 check
+    server 7d2f499d261b_1_32771 192.168.99.105:32771 check resolvers docker
 
-    server 7d2f499d261b_2_32769 192.168.99.105:32769 check
+    server 7d2f499d261b_2_32769 192.168.99.105:32769 check resolvers docker
 
     acl defaultUsersAcl http_auth(defaultUsers)
     http-request auth realm defaultRealm if !defaultUsersAcl
