--- a/issues/171/stack.yml
+++ b/issues/171/stack.yml
@@ -3,17 +3,16 @@ version: "3.1"
 services:
 
   proxy:
-    image: vfarcic/docker-flow-proxy:beta
+    image: vfarcic/docker-flow-proxy:issue-171
     ports:
       - 80:80
       - 443:443
-      - 8080:8080
+      - 8080:8080 # New
     networks:
       - proxy
     environment:
       - LISTENER_ADDRESS=swarm-listener
-      - MODE=swarm
-      - CONNECTION_MODE=http-keep-alive
+      - REPEAT_RELOAD=true # New
 
   swarm-listener:
     image: vfarcic/docker-flow-swarm-listener
